--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "license": "MIT",
     "dependencies": {
         "express": "^4.17.1",
-        "node-fetch": "^2.6.0"
+        "node-fetch": "^2.6.1",
+        "node-schedule": "^1.3.2"
     }
 }
