--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,13 @@
     "builds": [
         {
             "src": "index.js",
-            "use": "@now/node"
+            "use": "@vercel/node"
         }
     ],
     "routes": [{
         "headers":{
-            "Access-Control-Allow-Origin": "*",
-            "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS"
+            "Access-Control-Allow-Origin":"blog.zcmimi.top",
+            "Access-Control-Allow-Methods":"GET, POST"
         },
         "src": "/(.*)",
         "dest":"index.js"
